synopsis:     "synopsis test1"
description:  "description test1"
name:         "dune-test1"
opam-version: "2.0"
maintainer:   "mbaton@ya.ru"
authors:      "Nikolai"
homepage:     "https://github.com/AndronovN/dune-test1"
bug-reports:  "https://github.com/AndronovN/dune-test1"
dev-repo:     "git+https://github.com/AndronovN/dune-test1"
license:      "GPL 3"
doc:          "https://github.com/AndronovN/dune-test1/README.md"

depends: [
  "coq"           { >= "8.11.0" }
  "dune"          { >= "2.8.0"  }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
